--- a/install
+++ b/install
@@ -38,7 +38,7 @@ if ! [[ $USER_INPUT =~ $IS_NUMBER ]]; then
     exit 1
 fi
 
-if ((USER_INPUT < 1 || USER_INPUT > 5)); then
+if ((USER_INPUT < 1 || USER_INPUT > 6)); then
     echo >&2 "${RED}Error: Not a valid input${RESETCOLOR}"
     exit 1
 fi
@@ -81,6 +81,7 @@ elif [[ $USER_INPUT == 6 ]]; then
     git clone           -- https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
     echo "${CYAN}zsh-syntax-highlighting${RESETCOLOR}"
     git clone           -- https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+    exit
 fi
 
 #read -p "${YELLOW}Install ${CYAN}oh my zsh${YELLOW}? [y/N]: ${RESETCOLOR}" -n 1 -r
