--- a/install
+++ b/install
@@ -81,6 +81,9 @@ elif [[ $USER_INPUT == 6 ]]; then
     git clone           -- https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-autosuggestions
     echo "${CYAN}zsh-syntax-highlighting${RESETCOLOR}"
     git clone           -- https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+    echo "${CYAN}zsh-completions${RESETCOLOR}"
+    git clone https://github.com/zsh-users/zsh-completions ${ZSH_CUSTOM:=~/.oh-my-zsh/custom}/plugins/zsh-completions
+
     exit
 fi
 
