--- a/install
+++ b/install
@@ -43,7 +43,7 @@ copyFiles() {
     if addFile mpv; then ${COMMAND} mpv ~/.config/mpv; fi
     if addFile hyper.js; then 
         mkdir --parents --verbose ~/.config/Hyper
-        ${COMMAND} hyper.js ~/.config/Hyper/.hyper.js
+        ${COMMAND} hyper.js ~/.config/Hyper/config.json
     fi
     if addFile micro; then 
         mkdir --parents --verbose ~/.config/micro
