--- a/install
+++ b/install
@@ -28,8 +28,8 @@ addFile() {
 }
 
 chooseFromList() {
-    for (( i=1; i<=${#}-1; i++ )) do 
-        echo "${CYAN}[   ${i}   ]${RESETCOLOR} $(eval echo \$${i})" 
+    for (( i=1; i<=${#}-1; i++ )) do
+        echo "${CYAN}[   ${i}   ]${RESETCOLOR} $(eval echo \$${i})"
     done
     echo "${CYAN}[ Enter ]${RESETCOLOR} $(eval echo \$${#})"
     read -p "${YELLOW}Enter a choice: ${RESETCOLOR}" -n 1 -r
@@ -41,24 +41,29 @@ copyFiles() {
     if addFile bashrc; then ${COMMAND} bashrc     ~/.bashrc; fi
     if addFile gitconfig; then ${COMMAND} gitconfig ~/.gitconfig; fi
     if addFile mpv; then ${COMMAND} mpv ~/.config/mpv; fi
-    if addFile hyper.js; then 
+    if addFile hyper.js; then
         mkdir --parents --verbose ~/.config/Hyper
         ${COMMAND} hyper.js ~/.config/Hyper/config.json
     fi
-    if addFile micro; then 
+    if addFile micro; then
         mkdir --parents --verbose ~/.config/micro
-        ${COMMAND} microSettings.json ~/.config/micro/settings.json 
+        ${COMMAND} microSettings.json ~/.config/micro/settings.json
     fi
 
-    if addFile sublime-text; then 
+    if addFile sublime-text; then
         mkdir --parents --verbose ~/.config/sublime-text-3/Packages/User
         ${COMMAND} Preferences.sublime-settings ~/.config/sublime-text-3/Packages/User/Preferences.sublime-settings
+    fi
+
+	if addFile htoprc; then
+        mkdir --parents --verbose ~/.config/htop
+        ${COMMAND} htoprc ~/.config/htop/htoprc
     fi
 
     echo
     chooseFromList "Powerlevel10k fancy" "Powerlevel10k clean" "Next"
     if [[ -n $REPLY ]]; then
-        case ${REPLY} in 
+        case ${REPLY} in
             1) ${COMMAND} p10kFancy.zsh  ~/.p10k.zsh;;
             2) ${COMMAND} p10kClean.zsh  ~/.p10k.zsh;;
             *) echo >&2 "${RED}Error: Not a valid input${RESETCOLOR}"
@@ -68,7 +73,7 @@ copyFiles() {
 
     chooseFromList "nano 4" "nano 5" "Next"
     if [[ -n $REPLY ]]; then
-        case ${REPLY} in 
+        case ${REPLY} in
             1) ${COMMAND} nanorc4    ~/.nanorc;;
             2) ${COMMAND} nanorc5    ~/.nanorc;;
             *) echo >&2 "${RED}Error: Not a valid input${RESETCOLOR}"
@@ -89,31 +94,31 @@ while true; do
     chooseFromList "Copy to home" "Symlink" "Delete" "Copy from home" "Install oh-my-zsh" "Install oh-my-zsh plugins" "Install fzf" "Install fonts" "Exit"
     echo
     if [[ -z $REPLY ]]; then exit; fi
-    case $REPLY in 
-        1)  COMMAND="cp --verbose --recursive" 
+    case $REPLY in
+        1)  COMMAND="cp --verbose --recursive"
             copyFiles;;
 
         2)  COMMAND="ln --symbolic --verbose --force --relative"
             copyFiles;;
 
-        3)  rm --force --verbose ~/.zshrc     
-            rm --force --verbose ~/.bashrc     
-            rm --force --verbose ~/.nanorc   
+        3)  rm --force --verbose ~/.zshrc
+            rm --force --verbose ~/.bashrc
+            rm --force --verbose ~/.nanorc
             rm --force --verbose ~/.gitconfig
-            rm --force --verbose ~/.p10k.zsh 
+            rm --force --verbose ~/.p10k.zsh
             rm --force --verbose ~/.config/sublime-text-3/Packages/User/Preferences.sublime-settings
             rm --force --verbose ~/.config/micro
             rm --force --verbose ~/.config/Hyper/.hyper.js
             echo "${YELLOW}removing mpv...${RESETCOLOR}"
-            rm --recursive --force  ~/.config/mpv  
+            rm --recursive --force  ~/.config/mpv
             echo "${YELLOW}removing oh-my-zsh...${RESETCOLOR}"
-            rm --recursive --force ~/.oh-my-zsh 
+            rm --recursive --force ~/.oh-my-zsh
             echo "${YELLOW}removing fzf...${RESETCOLOR}"
             rm --recursive --force ~/.fzf;;
 
-        4)  cp --verbose --recursive ~/.zshrc     zshrc     
-            cp --verbose --recursive ~/.nanorc    nanorc    
-            cp --verbose --recursive ~/.gitconfig gitconfig 
+        4)  cp --verbose --recursive ~/.zshrc     zshrc
+            cp --verbose --recursive ~/.nanorc    nanorc
+            cp --verbose --recursive ~/.gitconfig gitconfig
             cp --verbose --recursive ~/.p10k.zsh  p10k.zsh;;
 
         5)  if command -v curl &>/dev/null; then sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
